--- a/.gitignore
+++ b/.gitignore
@@ -452,3 +452,8 @@ $RECYCLE.BIN/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+##
+## Ignore appsettings for development
+##
+appsettings.Development.json
