--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServerConnection": "#{connectionString-SqlServer}#"
+  },
+  "JwtKey": "#{jwtToken-Server}#",
+  "ApiKeyName": "#{apikey-Name}#",
+  "ApiKey": "#{apikey-Value}#",
+  "Smtp": {
+    "Host": "#{smtp-Host}#",
+    "Port": "#{smtp-Port}#",
+    "UserName": "#{smtp-UserName}#",
+    "Password": "#{smtp-Password}#"
+  }
 }
