Added: connection string of storage service

--- a/appsettings.json
+++ b/appsettings.json
@@ -12,6 +12,7 @@
   "JwtKey": "#{jwtToken-Server}#",
   "ApiKeyName": "#{apikey-Name}#",
   "ApiKey": "#{apikey-Value}#",
+  "StorageConnectionString": "#{connectionString-Storage}#",
   "Smtp": {
     "Host": "#{smtp-Host}#",
     "Port": "#{smtp-Port}#",
