--- a/.github/workflows/master_blog-balta-web-app.yml
+++ b/.github/workflows/master_blog-balta-web-app.yml
@@ -19,11 +19,17 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '6.0.x'
+          dotnet-version: "6.0.x"
           include-prerelease: true
+
+      - name: Installing EF tools
+        run: dotnet tool install --global dotnet-ef
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
+
+      - name: Execute migrations
+        run: dotnet ef database update
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
@@ -38,7 +44,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -51,7 +57,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'blog-balta-web-app'
-          slot-name: 'Production'
+          app-name: "blog-balta-web-app"
+          slot-name: "Production"
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_40A5B4B493B6426CA8325FA7F1F659A2 }}
           package: .
