--- a/.github/workflows/master_blog-balta-web-app.yml
+++ b/.github/workflows/master_blog-balta-web-app.yml
@@ -9,6 +9,9 @@ on:
       - master
   workflow_dispatch:
 
+env:
+  ConnectionStrings__DefaultConnection: ${{ secrets.AZURE_SQL_SERVER_CONNECTION_STRING }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -27,6 +30,18 @@ jobs:
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
+
+      - name: Azure Login
+        uses: Azure/login@v1.4.5
+        with:
+          creds: ${{ secrets.AZURE_LOGIN_CREDENTIALS }}
+
+      - name: Config migrations permissions
+        id: ip
+        uses: haythem/public-ip@v1.2
+
+      - name: Add scope execution of migrations
+        run: az sql server firewall-rule create --resource-group ${{ secrets.AZURE_RESOURCE_GROUP_NAME }} --server ${{ secrets.AZURE_SERVER_NAME }} --name ${{ secrets.AZURE_RULE_NAME }} --start-ip-address ${{ steps.ip.outputs.ipv4 }} --end-ip-address ${{ steps.ip.outputs.ipv4 }}
 
       - name: Execute migrations
         run: dotnet ef database update
