--- a/.github/workflows/master_blog-balta-web-app.yml
+++ b/.github/workflows/master_blog-balta-web-app.yml
@@ -32,7 +32,7 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: Azure Login
-        uses: Azure/login@v1
+        uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_LOGIN_CREDENTIALS }}
 
